example/cassiemujoco_ctypes.py


cassie_state_t = struct_cassie_state
cassie_mujoco_init = _libraries['./libcassiemujoco.so'].cassie_mujoco_init
cassie_mujoco_init.restype = ctypes.c_bool
cassie_mujoco_init.argtypes = [POINTER_T(ctypes.c_char)]
cassie_cleanup = _libraries['./libcassiemujoco.so'].cassie_cleanup
cassie_cleanup.restype = None
cassie_cleanup.argtypes = []
cassie_reload_xml = _libraries['./libcassiemujoco.so'].cassie_reload_xml
cassie_reload_xml.restype = ctypes.c_bool
cassie_reload_xml.argtypes = [ctypes.c_char_p]
cassie_sim_init = _libraries['./libcassiemujoco.so'].cassie_sim_init
cassie_sim_init.restype = POINTER_T(struct_cassie_sim)
cassie_sim_init.argtypes = [ctypes.c_char_p, ctypes.c_bool]
cassie_sim_duplicate = _libraries['./libcassiemujoco.so'].cassie_sim_duplicate
cassie_sim_duplicate.restype = POINTER_T(struct_cassie_sim)
cassie_sim_duplicate.argtypes = [POINTER_T(struct_cassie_sim)]
cassie_sim_copy = _libraries['./libcassiemujoco.so'].cassie_sim_copy
cassie_sim_copy.restype = None
cassie_sim_copy.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_cassie_sim)]
cassie_sim_free = _libraries['./libcassiemujoco.so'].cassie_sim_free
cassie_sim_free.restype = None
cassie_sim_free.argtypes = [POINTER_T(struct_cassie_sim)]
cassie_sim_step_ethercat = _libraries['./libcassiemujoco.so'].cassie_sim_step_ethercat
cassie_sim_step_ethercat.restype = None
cassie_sim_step_ethercat.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_c__SA_cassie_out_t), POINTER_T(struct_c__SA_cassie_in_t)]
cassie_sim_step = _libraries['./libcassiemujoco.so'].cassie_sim_step
cassie_sim_step.restype = None
cassie_sim_step.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_c__SA_cassie_out_t), POINTER_T(struct_c__SA_cassie_user_in_t)]
class struct_c__SA_state_out_t(ctypes.Structure):
    pass

class struct_c__SA_pd_in_t(ctypes.Structure):
    pass

class struct_c__SA_joint_filter_t(ctypes.Structure):
    _pack_ = True # source:False
    _fields_ = [
    ('x', ctypes.c_double * 4),
    ('y', ctypes.c_double * 3),
    ]
joint_filter_t = struct_c__SA_joint_filter_t

class struct_c__SA_drive_filter_t(ctypes.Structure):
    _pack_ = True # source:False
    _fields_ = [
    ('x', ctypes.c_double * 9),
    ]
drive_filter_t = struct_c__SA_drive_filter_t

cassie_sim_step_pd = _libraries['./libcassiemujoco.so'].cassie_sim_step_pd
cassie_sim_step_pd.restype = None
cassie_sim_step_pd.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_c__SA_state_out_t), POINTER_T(struct_c__SA_pd_in_t)]

cassie_integrate_pos = _libraries['./libcassiemujoco.so'].cassie_integrate_pos
cassie_integrate_pos.restype = None
cassie_integrate_pos.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(struct_c__SA_state_out_t)]

cassie_sim_time = _libraries['./libcassiemujoco.so'].cassie_sim_time
cassie_sim_time.restype = POINTER_T(ctypes.c_double)
cassie_sim_time.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_qpos = _libraries['./libcassiemujoco.so'].cassie_sim_qpos
cassie_sim_qpos.restype = POINTER_T(ctypes.c_double)
cassie_sim_qpos.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_qvel = _libraries['./libcassiemujoco.so'].cassie_sim_qvel
cassie_sim_qvel.restype = POINTER_T(ctypes.c_double)
cassie_sim_qvel.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_qacc = _libraries['./libcassiemujoco.so'].cassie_sim_qacc
cassie_sim_qacc.restype = POINTER_T(ctypes.c_double)
cassie_sim_qacc.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_mjmodel = _libraries['./libcassiemujoco.so'].cassie_sim_mjmodel
cassie_sim_mjmodel.restype = POINTER_T(None)
cassie_sim_mjmodel.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_mjdata = _libraries['./libcassiemujoco.so'].cassie_sim_mjdata
cassie_sim_mjdata.restype = POINTER_T(None)
cassie_sim_mjdata.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_check_obstacle_collision = _libraries['./libcassiemujoco.so'].cassie_sim_check_obstacle_collision
cassie_sim_check_obstacle_collision.restype = ctypes.c_bool
cassie_sim_check_obstacle_collision.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_check_self_collision = _libraries['./libcassiemujoco.so'].cassie_sim_check_self_collision
cassie_sim_check_self_collision.restype = ctypes.c_bool
cassie_sim_check_self_collision.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_foot_forces = _libraries['./libcassiemujoco.so'].cassie_sim_foot_forces
cassie_sim_foot_forces.restype = None
cassie_sim_foot_forces.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 12]

cassie_sim_heeltoe_forces = _libraries['./libcassiemujoco.so'].cassie_sim_heeltoe_forces
cassie_sim_heeltoe_forces.restype = None
cassie_sim_heeltoe_forces.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6, ctypes.c_double * 6]

cassie_sim_foot_positions = _libraries['./libcassiemujoco.so'].cassie_sim_foot_positions
cassie_sim_foot_positions.restype = None
cassie_sim_foot_positions.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6]

cassie_sim_foot_velocities = _libraries['./libcassiemujoco.so'].cassie_sim_foot_velocities
cassie_sim_foot_velocities.restype = None
cassie_sim_foot_velocities.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 12]

cassie_sim_cm_position = _libraries['./libcassiemujoco.so'].cassie_sim_cm_position
cassie_sim_cm_position.restype = None
cassie_sim_cm_position.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 3]

cassie_sim_cm_velocity = _libraries['./libcassiemujoco.so'].cassie_sim_cm_velocity
cassie_sim_cm_velocity.restype = None
cassie_sim_cm_velocity.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 3]

cassie_sim_centroid_inertia = _libraries['./libcassiemujoco.so'].cassie_sim_centroid_inertia
cassie_sim_centroid_inertia.restype = None
cassie_sim_centroid_inertia.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 9]

cassie_sim_angular_momentum = _libraries['./libcassiemujoco.so'].cassie_sim_angular_momentum
cassie_sim_angular_momentum.restype = None
cassie_sim_angular_momentum.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 3]

cassie_sim_full_mass_matrix = _libraries['./libcassiemujoco.so'].cassie_sim_full_mass_matrix
cassie_sim_full_mass_matrix.restype = None
cassie_sim_full_mass_matrix.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * (32*32)]

cassie_sim_minimal_mass_matrix = _libraries['./libcassiemujoco.so'].cassie_sim_minimal_mass_matrix
cassie_sim_minimal_mass_matrix.restype = None
cassie_sim_minimal_mass_matrix.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * (16*16)]

cassie_sim_loop_constraint_info = _libraries['./libcassiemujoco.so'].cassie_sim_loop_constraint_info
cassie_sim_loop_constraint_info.restype = None
cassie_sim_loop_constraint_info.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * (6*32), ctypes.c_double * (6)]

cassie_sim_foot_quat = _libraries['./libcassiemujoco.so'].cassie_sim_foot_orient
cassie_sim_foot_quat.restype = None
cassie_sim_foot_quat.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 4]

cassie_sim_body_vel = _libraries['./libcassiemujoco.so'].cassie_sim_body_velocities
cassie_sim_body_vel.restype = None
cassie_sim_body_vel.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6, ctypes.c_char_p]

cassie_sim_apply_force = _libraries['./libcassiemujoco.so'].cassie_sim_apply_force
cassie_sim_apply_force.restype = None
cassie_sim_apply_force.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 6, ctypes.c_char_p]

cassie_sim_xpos = _libraries['./libcassiemujoco.so'].cassie_sim_xpos
cassie_sim_xpos.restype = POINTER_T(ctypes.c_double)
cassie_sim_xpos.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_xquat = _libraries['./libcassiemujoco.so'].cassie_sim_xquat
cassie_sim_xquat.restype = POINTER_T(ctypes.c_double)
cassie_sim_xquat.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p]

cassie_sim_clear_forces = _libraries['./libcassiemujoco.so'].cassie_sim_clear_forces
cassie_sim_clear_forces.restype = None
cassie_sim_clear_forces.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_hold = _libraries['./libcassiemujoco.so'].cassie_sim_hold
cassie_sim_hold.restype = None
cassie_sim_hold.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_release = _libraries['./libcassiemujoco.so'].cassie_sim_release
cassie_sim_release.restype = None
cassie_sim_release.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_radio = _libraries['./libcassiemujoco.so'].cassie_sim_radio
cassie_sim_radio.restype = None
cassie_sim_radio.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 16]

cassie_sim_full_reset = _libraries['./libcassiemujoco.so'].cassie_sim_full_reset
cassie_sim_full_reset.restype = None
cassie_sim_full_reset.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_get_hfield_nrow = _libraries['./libcassiemujoco.so'].cassie_sim_get_hfield_nrow
cassie_sim_get_hfield_nrow.restype = ctypes.c_int32
cassie_sim_get_hfield_nrow.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_get_hfield_ncol = _libraries['./libcassiemujoco.so'].cassie_sim_get_hfield_ncol
cassie_sim_get_hfield_ncol.restype = ctypes.c_int32
cassie_sim_get_hfield_ncol.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_get_nhfielddata = _libraries['./libcassiemujoco.so'].cassie_sim_get_nhfielddata
cassie_sim_get_nhfielddata.restype = ctypes.c_int32
cassie_sim_get_nhfielddata.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_get_hfield_size = _libraries['./libcassiemujoco.so'].cassie_sim_get_hfield_size
cassie_sim_get_hfield_size.restype = POINTER_T(ctypes.c_double)
cassie_sim_get_hfield_size.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_set_hfield_size = _libraries['./libcassiemujoco.so'].cassie_sim_set_hfield_size
cassie_sim_set_hfield_size.restype = None
cassie_sim_set_hfield_size.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_double * 4]

cassie_sim_hfielddata = _libraries['./libcassiemujoco.so'].cassie_sim_hfielddata
cassie_sim_hfielddata.restype = POINTER_T(ctypes.c_float)
cassie_sim_hfielddata.argtypes = [POINTER_T(struct_cassie_sim)]

cassie_sim_set_hfielddata = _libraries['./libcassiemujoco.so'].cassie_sim_set_hfielddata
cassie_sim_set_hfielddata.restype = None
cassie_sim_set_hfielddata.argtypes = [POINTER_T(struct_cassie_sim), POINTER_T(ctypes.c_float)]

cassie_vis_init = _libraries['./libcassiemujoco.so'].cassie_vis_init
cassie_vis_init.restype = POINTER_T(struct_cassie_vis)
cassie_vis_init.argtypes = [POINTER_T(struct_cassie_sim), ctypes.c_char_p,ctypes.c_bool]

cassie_vis_extent = _libraries['./libcassiemujoco.so'].cassie_vis_extent
cassie_vis_extent.restype = ctypes.c_float
cassie_vis_extent.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_znear = _libraries['./libcassiemujoco.so'].cassie_vis_znear
cassie_vis_znear.restype = ctypes.c_float
cassie_vis_znear.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_zfar = _libraries['./libcassiemujoco.so'].cassie_vis_zfar
cassie_vis_zfar.restype = ctypes.c_float
cassie_vis_zfar.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_close = _libraries['./libcassiemujoco.so'].cassie_vis_close
cassie_vis_close.restype = None
cassie_vis_close.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_free = _libraries['./libcassiemujoco.so'].cassie_vis_free
cassie_vis_free.restype = None
cassie_vis_free.argtypes = [POINTER_T(struct_cassie_vis)]

cassie_vis_draw = _libraries['./libcassiemujoco.so'].cassie_vis_draw
cassie_vis_draw.restype = ctypes.c_bool
cassie_vis_draw.argtypes = [POINTER_T(struct_cassie_vis), POINTER_T(struct_cassie_sim)]

cassie_vis_set_cam = _libraries['./libcassiemujoco.so'].cassie_vis_set_cam
cassie_vis_set_cam.restype = None
cassie_vis_set_cam.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_char_p, ctypes.c_double, ctypes.c_double, ctypes.c_double]

cassie_vis_window_resize = _libraries['./libcassiemujoco.so'].cassie_vis_window_resize
cassie_vis_window_resize.restype = None
cassie_vis_window_resize.argtypes = [POINTER_T(struct_cassie_vis), ctypes.c_int32, ctypes.c_int32]
